--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
     <repositories>
         <repository>
             <id>inventive-repo</id>
-            <url>https://repo.inventivetalent.org/content/groups/public/</url>
+            <url>http://repo.inventivetalent.org/content/groups/public/</url>
         </repository>
     </repositories>
 
