--- a/pom.xml
+++ b/pom.xml
@@ -92,4 +92,15 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>sonatype-nexus-releases</id>
+            <url>https://repo.inventivetalent.org/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://repo.inventivetalent.org/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
